<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tyt"
        android:textColor="#808080"
        android:textSize="40sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/gury" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#008080">

        <Button
            android:id="@+id/buttonPolub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pol"
            android:backgroundTint="#008080"/>

        <Button
            android:id="@+id/buttonUsun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usu"
            android:backgroundTint="#008080"/>

        <Button
            android:id="@+id/buttonZapisz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zap"
            android:backgroundTint="#008080"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPolubienia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polub"
        android:textSize="20sp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_opis"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opis"
        android:textColor="#808080"
        android:textSize="15sp"/>


</LinearLayout>